# email

./: .env.bak  .env.example  .env.testing  .gitignore  API_IMPLEMENTATION.md  QUICK_START.md  README.md  capacitor.config.json  composer.json  index.html  package-lock.json  package.json  phpunit.xml  vite.config.js
.github/workflows/: tests.yml
app/: MailboxConfig.php
app/Helpers/: AiHelper.php  GravatarHelper.php  IcsHelper.php  NotifyHelper.php  NtfyHelper.php  OllamaHelper.php  ReadableTimeHelper.php  SvgHelper.php
app/Jobs/: FetchEmailsForProfileJob.php  FetchEmailsJob.php
app/Listeners/: LogNewMessage.php
app/Models/: Attachment.php  Email.php  Folder.php  ImapCredentials.php  IncomingEmailSender.php  Profile.php  Profiles.php  RemoteFolders.php  SmtpCredentials.php  Tag.php  User.php
app/Providers/: EventServiceProvider.php
app/Services/: EmailFetchingService.php
app/Support/: helpers.php
bootstrap/: app.php
config/: app.php  cors.php  email_fetching.php  laravel-openrouter.php  ollama-laravel.php
database/factories/: EmailFactory.php  FolderFactory.php  ImapCredentialsFactory.php  ProfileFactory.php  SmtpCredentialsFactory.php
database/migrations/: 2025_05_21_091504_create_emails_table.php  2025_05_30_160139_create_imap_credentials_table.php  2025_05_30_210623_update_emails_table.php  2025_06_14_162901_update_user_table.php  (+45 more)
ios/: .gitignore  Secrets.example.swift
routes/: api.php  console.php  web.php
src-tauri/: Cargo.toml  tauri.conf.json
supervisor/: email-fetcher-dispatcher.conf  email-fetcher-workers.conf
tests/: TestCase.php
(+130 files in other folders)
